--- a/BERTSentimentClassification.ipynb
+++ b/BERTSentimentClassification.ipynb
@@ -3,6 +3,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# BERT Sentiment Analysis"
+      ],
+      "metadata": {
+        "id": "w9Okfo3ZYsNp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Imports and Prerequisites"
       ],
       "metadata": {
